# Planetery-Engine

./: .gitignore  CMakeLists.txt  Planetery Engine.sln  README.md
BUILD_WITH/shader/: basic.frag  basic.vert  flatNormal.frag  flatNormal.vert  gui.frag  lightSource.frag  starPostProcessCross.vert  texR8Rect.frag  textRender.geom  textRender2.frag
Documentation/: index.html - Shortcut.lnk
Documentation/html/: ConsoleFormat_8h_source.html  FreeTypeModule_8h_source.html  GladGlfwGlTempModule_8h_source.html  GlfwModule_8h_source.html  GlmModule_8h_source.html  Marco_8h_source.html  ShelfPackModule_8h_source.html  VulkanExtModule_8h_source.html  annotated.html  annotated_dup.js  bug.html  classCView-members.html  classCView.html  classCView__coll__graph.map  classCView__coll__graph.md5  classConvertedIterator-members.html  classConvertedIterator.html  classConvertedIterator__coll__graph.map  classConvertedIterator__coll__graph.md5  classConvertedIterator__inherit__graph.map  classConvertedIterator__inherit__graph.md5  classFlags-members.html  classFlags.html  classFlags__coll__graph.map  classFlags__coll__graph.md5  classLog-members.html  classLog.html  classLogger_1_1LogLayerBase.html  (+951 more)
DoxyGen/: DoxyFile
Matrix Playaround/: Camera.cpp  Camera.h  Global.cpp  Global.h  Main.cpp  Matrix Playaround.vcxproj  Matrix Playaround.vcxproj.filters  ModelBase.cpp  ModelBase.h  RenderProgram.cpp  RenderProgram.h  RenderProgramA.cpp  RenderProgramA.h  ShaderProgram.cpp  ShaderProgram.h  Translations.cpp  Translations.h
MemPoolTest/: MemPoolTest.vcxproj  MemPoolTest.vcxproj.filters  Source.cpp  Source2.cpp
Memory Playaround/: Memory Playaround.vcxproj  Memory Playaround.vcxproj.filters  MemoryBlock.h  Using.h  main.cpp
Multithread Playaround/: Bridge.h  Camera.cpp  Camera.h  Definer.h  Geo.cpp  Geo.h  Global.cpp  Global.h  Main.cpp  ModelBase.cpp  ModelBase.h  Multithread Playaround.vcxproj  Multithread Playaround.vcxproj.filters  Physic.cpp  Physic.h  PxFoundations.h  RenderGui.cpp  RenderGui.h  RenderProgram.cpp  RenderProgram.h  RenderThread.h  RollingAverage.h  ShaderProgram.cpp  ShaderProgram.h  Translations.cpp  Translations.h  tester.cpp
Planetery Engine Playaround/: Camera.cpp  Camera.h  Data.h  Global.cpp  Global.h  Planetery Engine Playaround.vcxproj  Planetery Engine Playaround.vcxproj.filters  RenderProgram.cpp  RenderProgram.h  Translations.cpp  Translations.h  main.cpp  shaderProgram.cpp  shaderProgram.h
Planetery Engine PreBuild/: ContainerBase.h  DynamicBuffer.h  Planetery Engine PreBuild.vcxproj  Planetery Engine PreBuild.vcxproj.filters  main.cpp  shaderProgram.cpp  shaderProgram.h
Planetery Engine PreBuild v0.2/: Anchors.cpp  Anchors.h  Global.cpp  Global.h  GridBase.cpp  GridBase.h  GridGalaxies.cpp  GridGalaxies.h  GridGalaxy.cpp  GridGalaxy.h  Main.cpp  Manager.cpp  Manager.h  Planetery Engine PreBuild v0.2.vcxproj  Planetery Engine PreBuild v0.2.vcxproj.filters  RendererBase.cpp  RendererBase.h  ShaderProgram.cpp  Translations.cpp  Translations.h  Utility.cpp  utility.h
Planetery Engine PreBuild v0.3/: .clang-format  Asan.props  CMakeLists.txt  ConsoleFormat.h  Def.ixx  DefMath.ixx  DefThread.ixx  Define.h  Define.ixx  DefineMath.h  DefineThreadSync.cpp  DefineThreadSync.h  DefineUtil.cpp  DefineUtil.h  Font.cpp  Font.h  Font.ixx  FreeTypeModule.h  GL.cpp  GL.h  GL.ixx  GLFW.h  GLM.ixx  GUI.cpp  GUI.h  GladGlfwGlTempModule.h  GlfwModule.h  GlmModule.h  Headererererer.i  Log.txt  Logger.cpp  Logger.h  Logger.ixx  Main.cpp  Marco.h  MemoryResource.h  MultiStream.h  MultiStream.ixx  MultilineString.cpp  MultilineString.h  (+55 more)
Planetery Engine PreBuild v0.3/Header/: ConsoleFormat.h  Marco.h
Planetery Engine PreBuild v0.3/Src/: Define.ixx  Font.cpp  GL.cpp  GL.ixx  Logger.ixx  StringBox.cpp  ThreadEvents.cpp  ThreadEvents.ixx  ThreadRender.cpp  Util.ixx
Planetery Engine PreBuild v0.3/SrcHeaderUnit/: GlmModule.h
Planetery Engine PreBuild v0.3/SrcVulkan/: Vulkan-Buffer.ixx  Vulkan-BufferImp.cpp  Vulkan-Commend.ixx  Vulkan-CommendImp.cpp  Vulkan-Declaration.ixx  Vulkan-Descriptor.ixx  Vulkan-DescriptorImp.cpp  Vulkan-Device.ixx  Vulkan-DeviceImp.cpp  Vulkan-Enum.ixx  Vulkan-Image.ixx  Vulkan-ImageImp.cpp  Vulkan-Internal.ixx  Vulkan-Lifetime.ixx  Vulkan-Memory.ixx  Vulkan-MemoryImp.cpp  Vulkan-Pipeline.ixx  Vulkan-PipelineImp.cpp  Vulkan-Queue.ixx  Vulkan-QueueImp.cpp  Vulkan-Shader.ixx  Vulkan-ShaderImp.cpp  Vulkan-Swapchain.ixx  Vulkan-SwapchainImp.cpp  Vulkan-Sync.ixx  Vulkan-SyncImp.cpp  Vulkan-Tick.ixx  Vulkan-TickImp.cpp  Vulkan.cpp  Vulkan.ixx  VulkanExtModule.h  VulkanNativeCall.cpp
Planetery Engine PreBuild v0.3/TempFix/: memory_resource  memory_resource.cpp
Planetery Engine PreBuild v0.3/cshader/: testSsbo.vert  testSsbo.vert.spv  testUniform.cfrag  testUniform.cvert  testUniformAndTexture.frag  testUniformAndTexture.frag.spv  testUniformAndTexture.vert  testUniformPushTex.frag  testUniformPushTex.frag.spv  testUniformPushTex.vert.spv
Planetery Engine PreBuild v0.3/shader/: flatRect.frag  flatRect.geom  flatRectBorder.frag  flatRectBorder.geom  flatRectFilledBorder.frag  flatRectFilledBorder.geom  flatRectFilledBorder.vert  lighting.frag  point.frag  point.vert  starPostProcess.frag  starPostProcessCross.frag  starPreProcess.vert  stars.vert  texRect.frag  texRectR8Color.geom  textRender.frag  textRender.vert  textRender2.geom  textRender2.vert  textRenderVk.vert
Planetery Engine PreBuild v0.3/shader/stars/: Galaxy.geom  stars.gs  stars.vert
Tests/: CMakeLists.txt  DefineUtilTest.cpp  Tests.vcxproj
lib/: LowLevelAABB_static_64.lib  LowLevel_static_64.lib  PhysXCharacterKinematic_static_64.lib  PhysXCommon_64.exp  PhysXCommon_64.map  PhysXCooking_64.exp  PhysXCooking_64.map  PhysXFoundation_64.exp  PhysXPvdSDK_static_64.lib  PhysXTask_static_64.lib  PhysX_64.exp  SampleBase_static_64.lib  SampleFramework_static_64.lib  SamplesToolkit_static_64.lib  SceneQuery_static_64.lib  SnippetRender_static_64.lib  SnippetUtils_static_64.lib  glfw3.lib
sharedInclude/: shelf-packModulize.h
vsProperties/: Debug.props  FastCompile.props  Speed.props
(+854 files in other folders)
